--- a/Captone_Project_Ted_Talk_Views_Predictions.ipynb
+++ b/Captone_Project_Ted_Talk_Views_Predictions.ipynb
@@ -28,8 +28,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Problem Statement**"
+        "# **Project Name** - **Ted Talk View Predication**"
       ],
+      "metadata": {
+        "id": "idByRMz7Vr4e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Project Type - Regression**\n",
+        "\n",
+        "**Contribution - Individual**"
+      ],
+      "metadata": {
+        "id": "RT9NREH7VxO-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "id": "DIQa8FCZq4Qm"
       }
@@ -46,27 +64,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**\"TED is devoted to spreading powerful ideas on just about any topic. These datasets contain over 4,000 TED talks including transcripts in many languages.Founded in 1984 by Richard Salman as a nonprofit organization that aimed at bringing experts from the fields of Technology, Entertainment, and Design together, TED Conferences have gone on to become the Mecca of ideas from virtually all walks of life. As of 2015, TED and its sister TEDx chapters have published more than 2000 talks for free consumption by the masses and its speaker list boasts of the likes of Al Gore, Jimmy Wales, Shahrukh Khan, and Bill Gates. \n",
-        "\n",
-        "#The main objective is to build a predictive model, which could help in predicting the views of the videos uploaded on the TEDx website.\"**"
+        "# **Project Summary-**"
       ],
       "metadata": {
-        "id": "CvV5bNPJ09UZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Project Summary:**"
-      ],
-      "metadata": {
-        "id": "RmW7GuN_KBjR"
+        "id": "gTGtWHrgWDEj"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
         "**Individual Submission:**\n",
+        "\n",
         "\n",
         "Name : pooja Swami \n",
         "\n",
@@ -120,7 +128,46 @@
         "directly impacting the views"
       ],
       "metadata": {
-        "id": "yoP_hjwQKGyA"
+        "id": "8PYJJ6CdWX1Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **GitHub Link** -\n",
+        "GitHub Link:- https://github.com/PoojaSwamii/Capstone-Project---Ted-Talk-Views-Predications"
+      ],
+      "metadata": {
+        "id": "122iEAxDWtsz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Problem Statement-**"
+      ],
+      "metadata": {
+        "id": "WVRwY76rWTUT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**\"TED is devoted to spreading powerful ideas on just about any topic. These datasets contain over 4,000 TED talks including transcripts in many languages.Founded in 1984 by Richard Salman as a nonprofit organization that aimed at bringing experts from the fields of Technology, Entertainment, and Design together, TED Conferences have gone on to become the Mecca of ideas from virtually all walks of life. As of 2015, TED and its sister TEDx chapters have published more than 2000 talks for free consumption by the masses and its speaker list boasts of the likes of Al Gore, Jimmy Wales, Shahrukh Khan, and Bill Gates. \n",
+        "\n",
+        "#The main objective is to build a predictive model, which could help in predicting the views of the videos uploaded on the TEDx website.\"**"
+      ],
+      "metadata": {
+        "id": "CvV5bNPJ09UZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Let's Begin !"
+      ],
+      "metadata": {
+        "id": "1cfMqVsWW6LR"
       }
     },
     {
@@ -6485,7 +6532,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Conclusion**"
+        "\n",
+        "\n",
+        "# **Conclusion-**"
       ],
       "metadata": {
         "id": "7dJCdBWLtt4e"
