--- a/Captone_Project_Ted_Talk_Views_Predictions.ipynb
+++ b/Captone_Project_Ted_Talk_Views_Predictions.ipynb
@@ -104,25 +104,25 @@
         "The main objective was to build a predictive model, which could help in predicting the views of\n",
         "the videos uploaded on the TEDx website. TEDx is a nonprofit organisation that aimed at\n",
         "bringing experts from the fields of Technology, Entertainment, and Design together.\n",
-        "Our Approach\n",
-        "We started the project with Data Exploration in which we faced many challenges as the dataset\n",
+        "My Approach\n",
+        "I started the project with Data Exploration in which I faced many challenges as the dataset\n",
         "included data in many different data structures which was a bit complicated to extract but the\n",
         "most challenging part of EDA was dealing with categorical variables, it took a lot of research to\n",
-        "deal with such a large number of categorical variables. We used visualizations to explain our\n",
+        "deal with such a large number of categorical variables. Iused visualizations to explain my\n",
         "findings mainly through matplotlib and seaborn libraries in python. Following EDA we performed\n",
         "feature engineering, data cleaning, target encoding and one hot encoding of categorical columns,\n",
         "feature selection, standardization and then model building. We dealt with missing data and\n",
-        "outliers. That's a lot of work that Python helped us make easier. Then we checked our model for\n",
+        "outliers. That's a lot of work that Python helped me make easier. Then I checked my model for\n",
         "overfitting by comparing it with the Lasso Regression model, Ridge Regression model, and\n",
         "ElasticNet Regression model. And performed hyperparameter tuning with the help of grid search.\n",
-        "We found that our original base model was overfitting and Lasso Regressor has the best\n",
+        "I found that my original base model was overfitting and Lasso Regressor has the best\n",
         "accuracy. based on the MAE error metric.\n",
         "Conclusion\n",
-        "In all of these models error has been around 34 % but we will consider the median error\n",
-        "percentage, which is 13 %, to measure the accuracy because of the outliers. That implies we\n",
+        "In all of these models error has been around 34 % but I will consider the median error\n",
+        "percentage, which is 13 %, to measure the accuracy because of the outliers. That implies I\n",
         "have been able to correctly predict views 87 % of the time.\n",
-        "After hyperparameter tuning, we have prevented overfitting and decreased errors by regularizing.\n",
-        "Given that only 13 % errors, our models have performed very well on unseen data due to various\n",
+        "After hyperparameter tuning, I have prevented overfitting and decreased errors by regularizing.\n",
+        "Given that only 13 % errors, My models have performed very well on unseen data due to various\n",
         "factors like effective EDA, feature selection, and correct model selection.\n",
         "Among all the features speaker_1_avg_views is the most important this implies that speakers are\n",
         "directly impacting the views"
